logo alignment fix

--- a/stylesheets/scss/_main_navigation.scss
+++ b/stylesheets/scss/_main_navigation.scss
@@ -3,8 +3,7 @@
 }
 
 .logo, .logo_word {
-	display: inline-block;
-	float: left;
+	img {vertical-align: top;}
 }
 .logo {
 	width: .5em;
@@ -20,7 +19,7 @@
 	line-height:1.2;
 	font-size: .55em;
 	color: #333;
-	margin-top: .4em;
+	margin-top: -.3em;
 	margin-left: .05em;
 	float: left;
 }
